Added tasks descriptions

--- a/lesson-1/lesson-1.ipynb
+++ b/lesson-1/lesson-1.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# «Основы Python»"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Задание 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Даны 2 переменных, в которых хранятся строки произвольной длины: phrase_1 и phrase_2.\n",
+    "Напишите код, который проверяет какая из этих строк длиннее."
    ]
   },
   {
@@ -40,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана переменная, в которой хранится четырехзначное число (год). Необходимо написать программу, которая выведет, является ли данный год високосным или обычным."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -56,9 +78,9 @@
     "year = 2000\n",
     "\n",
     "if year % 4 != 0 or (year % 100 == 0 and year % 400 != 0):\n",
-    "    print(\"Обычный год\")\n",
+    "    print('Обычный год')\n",
     "else:\n",
-    "    print(\"Високосный год\")"
+    "    print('Високосный год')"
    ]
   },
   {
@@ -66,6 +88,13 @@
    "metadata": {},
    "source": [
     "# Задание 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Необходимо написать программу, которая будет запрашивать у пользователя месяц и дату рождения и выводить соответствующий знак зодиака."
    ]
   },
   {
@@ -125,8 +154,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вам нужно написать программу для подбора упаковок по размерам товара. Размеры хранятся в переменных (в сантиметрах)\n",
+    "- если каждое из трех измерений менее 15 сантиметров, то выведите на экран “Коробка №1”;\n",
+    "- если хотя бы одно из измерений больше 15 сантиметров, но менее 50 сантиметров, то выводите “Коробка №2”;\n",
+    "- если длина товара больше 2 метров, то выводите “Упаковка для лыж”;\n",
+    "- во всех остальных случаях выводите “Стандартная коробка №3”."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,18 +178,18 @@
     }
    ],
    "source": [
-    "width = 10\n",
+    "width = 45\n",
     "length = 205\n",
-    "height = 5\n",
+    "height = 45\n",
     "\n",
-    "if width < 15 and length < 15 and height < 15:\n",
-    "    print(\"Коробка №1\")\n",
+    "if length > 200:\n",
+    "    print('Упаковка для лыж')\n",
+    "elif width < 15 and length < 15 and height < 15:\n",
+    "    print('Коробка №1')\n",
     "elif 15 < width < 50 or 15 < length < 50 or 15 < height < 50:\n",
-    "    print(\"Коробка №2\")\n",
-    "elif length > 200:\n",
-    "    print(\"Упаковка для лыж\")\n",
+    "    print('Коробка №2')\n",
     "else:\n",
-    "    print(\"Стандартная коробка №3\")"
+    "    print('Стандартная коробка №3')"
    ]
   },
   {
@@ -157,6 +197,13 @@
    "metadata": {},
    "source": [
     "# Задание 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана переменная, в которой хранится шестизначное число (номер проездного билета). Напишите программу, которая будет определять, является ли данный билет “счастливым”. Билет считается счастливым, если сумма первых трех цифр совпадает с суммой последних трех цифр номера."
    ]
   },
   {
@@ -177,9 +224,9 @@
     "\n",
     "number_str = str(number)\n",
     "if int(number_str[0]) + int(number_str[1]) + int(number_str[2]) == int(number_str[3]) + int(number_str[4]) + int(number_str[5]):\n",
-    "    print(\"Счастливый билет\")\n",
+    "    print('Счастливый билет')\n",
     "else:\n",
-    "    print(\"Несчастливый билет\")"
+    "    print('Несчастливый билет')"
    ]
   },
   {
@@ -190,8 +237,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Напишите программу, которая сможет вычислять площади трех фигур (круг, треугольник и прямоугольник). Тип фигуры запрашиваем через пользовательский ввод, после чего делаем запрос характеристик фигуры:\n",
+    "- если пользователь выбрал круг, запрашиваем его радиус,\n",
+    "- если треугольник – длины трех его сторон;\n",
+    "- если прямоугольник – длины двух его сторон."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -205,26 +262,26 @@
     }
    ],
    "source": [
-    "type = input(\"Введите тип фигуры: \")\n",
+    "type = input('Введите тип фигуры: ')\n",
     "\n",
-    "if type == \"Круг\":\n",
-    "    r = float(input(\"Введите радиус круга: \"))\n",
+    "if type == 'Круг':\n",
+    "    r = float(input('Введите радиус круга: '))\n",
     "    from math import pi\n",
-    "    print(\"Площадь круга: \", pi * r ** 2)\n",
-    "elif type == \"Треугольник\":\n",
-    "    tr_a = float(input(\"Введите длину стороны A: \"))\n",
-    "    tr_b = float(input(\"Введите длину стороны B: \"))\n",
-    "    tr_c = float(input(\"Введите длину стороны C: \"))\n",
+    "    print('Площадь круга: ', pi * r ** 2)\n",
+    "elif type == 'Треугольник':\n",
+    "    tr_a = float(input('Введите длину стороны A: '))\n",
+    "    tr_b = float(input('Введите длину стороны B: '))\n",
+    "    tr_c = float(input('Введите длину стороны C: '))\n",
     "    p = (tr_a + tr_b + tr_c) / 2\n",
     "    from math import sqrt\n",
     "    s = sqrt(p * (p - tr_a) * (p - tr_b) * (p - tr_c))\n",
-    "    print(\"Площадь треугольника: \", s)\n",
-    "elif type == \"Прямоугольник\":\n",
-    "    rec_a = float(input(\"Введите длину стороны A: \"))\n",
-    "    rec_b = float(input(\"Введите длину стороны B: \"))\n",
-    "    print(\"Площадь приямоугольника: \", rec_a * rec_b)\n",
+    "    print('Площадь треугольника: ', s)\n",
+    "elif type == 'Прямоугольник':\n",
+    "    rec_a = float(input('Введите длину стороны A: '))\n",
+    "    rec_b = float(input('Введите длину стороны B: '))\n",
+    "    print('Площадь приямоугольника: ', rec_a * rec_b)\n",
     "else:\n",
-    "    print(\"Ошибка: Тип не существует\")"
+    "    print('Ошибка: Тип не существует')"
    ]
   }
  ],
