--- a/lesson-2/lesson-2.ipynb
+++ b/lesson-2/lesson-2.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# «Управляющие конструкции и коллекции» Часть 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Задание 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана переменная, в которой хранится слово из латинских букв. Напишите код, который выводит на экран:\n",
+    "- среднюю букву, если число букв в слове четное;\n",
+    "- две средних буквы, если число букв нечетное."
    ]
   },
   {
@@ -34,6 +50,13 @@
    "metadata": {},
    "source": [
     "# Задание 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Напишите программу, которая последовательно запрашивает у пользователя числа (по одному за раз) и после первого нуля выводит сумму всех ранее введенных чисел."
    ]
   },
   {
@@ -69,6 +92,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Мы делаем MVP dating-сервиса, и у нас есть список парней и девушек.\n",
+    "Выдвигаем гипотезу: лучшие рекомендации мы получим, если просто отсортируем имена по алфавиту и познакомим людей с одинаковыми индексами после сортировки! Но мы не будем никого знакомить, если кто-то может остаться без пары"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -90,7 +121,7 @@
     "girls = ['Kate', 'Liza', 'Kira', 'Emma', 'Trisha']\n",
     "\n",
     "if len(boys) != len(girls):\n",
-    "    print(\"Внимание, кто-то может остаться без пары!\")\n",
+    "    print('Внимание, кто-то может остаться без пары!')\n",
     "else:\n",
     "    for i, j in zip(sorted(boys), sorted(girls)):\n",
     "        print(i, 'и', j)"
@@ -101,6 +132,13 @@
    "metadata": {},
    "source": [
     "# Задание 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "У нас есть список, содержащий информацию о среднедневной температуре в Фаренгейтах за произвольный период по странам (структура данных в примере). Необходимо написать код, который рассчитает среднюю температуру за период в Цельсиях(!) для каждой страны."
    ]
   },
   {
@@ -128,7 +166,7 @@
     "    ['Poland', [50, 50, 53.6, 57.2, 55.4, 55.4]]\n",
     "]\n",
     "\n",
-    "print(\"Средняя температура в странах:\")\n",
+    "print('Средняя температура в странах:')\n",
     "\n",
     "for country in countries_temperature:\n",
     "    print(country[0], '-', round((sum(country[1]) / len(country[1]) - 32) * 5 / 9, 1), 'C')"
@@ -139,6 +177,13 @@
    "metadata": {},
    "source": [
     "# Задание 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дан поток логов по количеству просмотренных страниц для каждого пользователя. Вам необходимо написать алгоритм, который считает среднее значение просмотров на пользователя. Т. е. надо посчитать отношение суммы всех просмотров к количеству уникальных пользователей."
    ]
   },
   {
@@ -179,7 +224,7 @@
     "        users.append(log_string[1])\n",
     "    views += int(log_string[2])\n",
     "    \n",
-    "print(\"Среднее количество просмотров на уникального пользователя:\", round(views / len(users), 2))\n",
+    "print('Среднее количество просмотров на уникального пользователя:', round(views / len(users), 2))\n",
     "    "
    ]
   },
@@ -188,6 +233,13 @@
    "metadata": {},
    "source": [
     "# Задание 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Необходимо у пользователя запрашивать набор чисел разделенных пробелом. В результате должны выводиться числа, которые повторяются в вводе более одного раза."
    ]
   },
   {
@@ -205,7 +257,7 @@
     }
    ],
    "source": [
-    "init_list = input(\"Введите числа: \").split(' ')\n",
+    "init_list = input('Введите числа: ').split(' ')\n",
     "\n",
     "prev = 999\n",
     "target_list = []\n",
