--- a/lesson-3/lesson-3.ipynb
+++ b/lesson-3/lesson-3.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# «Управляющие конструкции и коллекции» Часть 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Задание 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана переменная, в которой хранится словарь, содержащий гео-метки для каждого пользователя. Вам необходимо написать программу, которая выведет на экран множество уникальных гео-меток всех пользователей."
    ]
   },
   {
@@ -39,16 +53,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана переменная, в которой хранится список поисковых запросов пользователя (пример структуры данных приведен ниже). Вам необходимо написать программу, которая выведет на экран распределение количества слов в запросах в требуемом виде."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Поисковых запросов, содержащих 2 слов(а): 42.86%\n",
-      "Поисковых запросов, содержащих 3 слов(а): 57.14%\n"
+      "Поисковых запросов, содержащих 2 слов(а): 57.14 %\n",
+      "Поисковых запросов, содержащих 3 слов(а): 42.86 %\n"
      ]
     }
    ],
@@ -60,7 +81,7 @@
     "    'курс доллара',\n",
     "    'сериалы этим летом',\n",
     "    'курс по питону',\n",
-    "    'сериалы про спорт',\n",
+    "    'сериалы спорт',\n",
     "]\n",
     "\n",
     "words = {}\n",
@@ -70,7 +91,7 @@
     "    words[len(item.split(' '))] += 1\n",
     "\n",
     "for key in sorted(words.items()):\n",
-    "    print ('Поисковых запросов, содержащих', key[0], 'слов(а):', str(round(key[1] / sum(words.values()) * 100, 2)) + '%')\n"
+    "    print (f'Поисковых запросов, содержащих {key[0]} слов(а): {str(round(key[1] / sum(words.values()) * 100, 2))} %')\n"
    ]
   },
   {
@@ -78,6 +99,13 @@
    "metadata": {},
    "source": [
     "# Задание 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана переменная, в которой хранится информация о затратах и доходе рекламных кампаний по различным источникам. Необходимо дополнить исходную структуру показателем ROI, который рассчитаем по формуле: (revenue / cost - 1) * 100"
    ]
   },
   {
@@ -116,9 +144,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана переменная, в которой хранится статистика рекламных каналов по объемам продаж (пример структуры данных приведен ниже). Напишите программу, которая возвращает название канала с максимальным объемом продаж."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -141,6 +178,13 @@
    "metadata": {},
    "source": [
     "# Задание 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дан список произвольной длины. Необходимо написать код, который на основе исходного списка составит словарь такого уровня вложенности, какова длина исхондого списка."
    ]
   },
   {
@@ -176,8 +220,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дана книга рецептов с информацией о том, сколько ингредиентов нужно для приготовления блюда в расчете на одну порцию (пример данных представлен ниже).\n",
+    "Напишите программу, которая будет запрашивать у пользователя количество порций для приготовления этих блюд и отображать информацию о суммарном количестве требуемых ингредиентов в указанном виде."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
