--- a/lesson-4/lesson-4.ipynb
+++ b/lesson-4/lesson-4.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,25 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def doc_owner(doc_num):\n",
+    "def doc_owner():\n",
     "    \"\"\"\n",
     "    Функция возвращает владельца документа по его номеру\n",
     "    \"\"\"\n",
-    "    \n",
+    "    doc_num = input('Введите номер документа: ')\n",
     "    for doc in documents:\n",
     "        if doc.get('number') == doc_num:\n",
-    "            return 'Владелец документа: ' + doc.get('name')\n",
+    "            print('Владелец документа: ' + doc.get('name'))\n",
+    "            return\n",
     "        \n",
-    "    return 'Документ не найден в базе'"
+    "    print('Документ не найден в базе')\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def doc_directory_full():\n",
+    "    \"\"\"\n",
+    "    Функция возвращает по номеру документа на какой полке он хранится с обработкой исключений\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    doc_num = input('Введите номер документа: ')\n",
+    "    for directory, docs in directories.items():\n",
+    "        if doc_num in docs:\n",
+    "            print('Документ хранится на полке: ', directory)\n",
+    "            return\n",
+    "    \n",
+    "    print('Документ не найден в базе')\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_dir(dir_num):\n",
+    "def add_dir():\n",
     "    \"\"\"\n",
     "    Функция добавляет полку с указанным номером\n",
     "    \"\"\"\n",
     "    \n",
+    "    dir_num = input('Введите номер полки: ')\n",
     "    if directories.get(dir_num) is not None:\n",
     "        print(f\"Такая полка уже существует. {dir_list()}.\")\n",
     "    else:\n",
@@ -170,15 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def del_dir(dir_num):\n",
+    "def del_dir():\n",
     "    \"\"\"\n",
     "    Функция удаляет полку с указанным номером, если она пустая\n",
     "    \"\"\"\n",
     "    \n",
+    "    dir_num = input('Введите номер полки: ')\n",
     "    if directories.get(dir_num) is not None:\n",
     "        if directories[dir_num] == []:\n",
     "            directories.pop(dir_num)\n",
@@ -191,14 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_doc(doc_num, doc_type, doc_owner, dir_num):\n",
+    "def add_doc():\n",
     "    \"\"\"\n",
     "    Функция добавляет новый документ\n",
     "    \"\"\"\n",
+    "    \n",
+    "    doc_num = input('Введите номер документа: ')              \n",
+    "    doc_type = input('Введите тип документа: ')\n",
+    "    doc_owner = input('Введите владельца документа: ')\n",
+    "    dir_num = input('Введите полку для хранения: ')\n",
     "    \n",
     "    if find_doc(doc_num) is not None:\n",
     "        print('Документ с таким номером существует. Текущий список документов:')\n",
@@ -219,18 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def del_doc(doc_num):\n",
+    "def del_doc():\n",
     "    \"\"\"\n",
     "    Функция удаляет документ с указанным номером\n",
     "    \"\"\"\n",
     "    \n",
+    "    doc_num = input('Введите номер документа: ')\n",
     "    doc_index = find_doc(doc_num)\n",
     "    if doc_index is not None:\n",
     "            documents.pop(doc_index)\n",
+    "            directories[doc_directory(doc_num)].remove(doc_num)\n",
     "            print('Документ удален. Текущий список документов:')\n",
     "            full_info()\n",
     "            return\n",
@@ -242,14 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def move_doc(doc_num, dir_num):\n",
+    "def move_doc():\n",
     "    \"\"\"\n",
     "    Функция перемещает документ на указанную полку\n",
     "    \"\"\"\n",
+    "    \n",
+    "    doc_num = input('Введите номер документа: ')\n",
+    "    dir_num = input('Введите полку для хранения: ')\n",
     "    \n",
     "    if find_doc(doc_num) is not None:\n",
     "        if directories.get(dir_num) is None:\n",
@@ -271,7 +306,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commands = {\n",
+    "    'p': doc_owner,\n",
+    "    's': doc_directory_full,\n",
+    "    'l': full_info,\n",
+    "    'ads': add_dir,\n",
+    "    'ds': del_dir,\n",
+    "    'ad': add_doc,\n",
+    "    'd': del_doc,\n",
+    "    'm': move_doc\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -287,39 +340,9 @@
     "    command = ''\n",
     "    while command != 'q':\n",
     "        command = input('Введите команду: ')\n",
+    "        if command in commands:\n",
+    "            commands[command]()\n",
     "        \n",
-    "        if command == 'p':\n",
-    "            print(doc_owner(input('Введите номер документа: ')))\n",
-    "        \n",
-    "        elif command == 's':\n",
-    "            directory = doc_directory(input('Введите номер документа: '))\n",
-    "            if directory is not None:\n",
-    "                print('Документ хранится на полке: ', directory)\n",
-    "            else:\n",
-    "                print('Документ не найден в базе')\n",
-    "        \n",
-    "        elif command == 'l':\n",
-    "            full_info()\n",
-    "        \n",
-    "        elif command == 'ads':\n",
-    "            add_dir(input('Введите номер полки: '))\n",
-    "        \n",
-    "        elif command == 'ds':\n",
-    "            del_dir(input('Введите номер полки: '))\n",
-    "        \n",
-    "        elif command == 'ad':\n",
-    "            add_doc(input('Введите номер документа: '), \n",
-    "                    input('Введите тип документа: '), \n",
-    "                    input('Введите владельца документа: '), \n",
-    "                    input('Введите полку для хранения: '))\n",
-    "        \n",
-    "        elif command == 'd':\n",
-    "            del_doc(input('Введите номер документа: '))\n",
-    "        \n",
-    "        elif command == 'm':\n",
-    "            move_doc(input('Введите номер документа: '),\n",
-    "                     input('Введите номер полки: '))\n",
-    "            \n",
     "main()"
    ]
   }
