--- a/lesson-17/lesson-17.ipynb
+++ b/lesson-17/lesson-17.ipynb
@@ -54,27 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.32543"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Средний проигрыш: -0.308872\n"
+     ]
     }
    ],
    "source": [
-    "trials = 100000\n",
+    "trials = 1000000\n",
     "total_win = 0\n",
     "\n",
     "for i in range(trials):\n",
     "    random_num = np.random.randint(0, 999)\n",
-    "    random_num = str(random_num)\n",
+    "    if random_num < 10:\n",
+    "        random_num = '00' + str(random_num)\n",
+    "    elif random_num < 100:\n",
+    "        random_num = '0' + str(random_num)\n",
+    "    else:\n",
+    "        random_num = str(random_num)\n",
     "    if random_num == '777':\n",
     "        total_win += 200\n",
     "    elif random_num == '999':\n",
@@ -94,7 +96,7 @@
     "    elif re.findall(r'\\d{2}0', random_num):\n",
     "        total_win += 1\n",
     "\n",
-    "(total_win - trials) / trials"
+    "print(f'Средний проигрыш: {(total_win - trials) / trials}')"
    ]
   }
  ],
