--- a/lesson-20/lesson-20.ipynb
+++ b/lesson-20/lesson-20.ipynb
@@ -18,34 +18,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy.stats as stats\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21608.205866404453"
+       "96.03647051735315"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "delta = 3\n",
-    "sigma = 225\n",
+    "sigma = math.sqrt(225)\n",
     "beta = 0.95\n",
     "\n",
     "alpha = 1 - beta\n",
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +246,7 @@
        "Солнце                15          45"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +269,7 @@
        "0.828664440194697"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +283,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можно сказать, что маг умеет предсказывать погоду, т.к. pvalue внутри доверительного интервала."
+    "Нулевая гипотеза - маг не умеет предсказывать погоду.\n",
+    "pvalue > 5%, значит нулевая гипотеза не может быть отвергнута. Т.е. маг не умеет предсказывать погоду."
    ]
   },
   {
